# llamaindex-parser-mcp

./: .example.env  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  UTILS_REMINDER.md  pyproject.toml
mcp_llaimaindex/: server.py
mcp_llaimaindex/mcp_llaimaindex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_llaimaindex/tests/: test_server.py
src/mcp_llamaindex/: app.py  config.py  dir_rag_server.py  logger.py  mcp_server.py  rag_pipeline.py  server.py
src/mcp_llamaindex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mcp_llamaindex/servers/: base.py
src/mcp_llamaindex/utils/: crawler.py  downloader.py
tests/: conftest.py  local_client.py  mcp_server_client.py  test_app.py  test_config.py  test_dir_rag_server.py  test_mcp_server.py  test_rag_index.py  test_server.py
tests/static/generated_examples/: example_1.md
tests/test_utils/: test_crawler.py  test_url_downloader.py
