[project]
name = "mcp_llamaindex"
version = "0.1.0"
dependencies = [
    "llama-index",
    "fastmcp>=2.11.3",
    "llama-index-embeddings-huggingface>=0.6.0",
    "chromadb>=1.0.17",
    "llama-index-vector-stores-chroma>=0.5.0",
    "llama-index-llms-lmstudio>=0.4.0",
    "pydantic",
    "pydantic-settings",
    "gradio",
    "html2text>=2025.4.15",
]

[dependency-groups]
dev = [
    "lmstudio>=1.5.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
